@@ -206,6 +206,13 @@ enum LIBESEDB_TAGGED_DATA_TYPES_FORMATS
 	LIBESEDB_TAGGED_DATA_TYPES_FORMAT_INDEX,
 };
 
+/* The record flags
+ */
+enum LIBESEDB_RECORD_FLAGS
+{
+	LIBESEDB_RECORD_FLAG_IS_CORRUPTED				= 0x01,
+};
+
 /* The file attribute flags
  */
 enum LIBESEDB_FILE_ATTRIBUTE_FLAGS
